[gd_scene load_steps=11 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Lobster_1.3.otf" type="DynamicFontData" id=3]
[ext_resource path="res://art/music/wrong-response.mp3" type="AudioStream" id=4]
[ext_resource path="res://art/music/correct-response.mp3" type="AudioStream" id=5]
[ext_resource path="res://Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://DataBase.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.780392 )
margin_left = -7.0
margin_top = 90.0
margin_right = 1028.0
margin_bottom = 459.0
color = Color( 0.341176, 0.556863, 0.580392, 1 )

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ResponceLabel" type="Label" parent="Popup"]
margin_left = -2.0
margin_top = 338.0
margin_right = 1028.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 3 )
text = "Some Text"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
margin_left = 197.0
margin_top = 101.0
margin_right = 891.0
margin_bottom = 700.0

[node name="Label" type="Label" parent="Popup/VBoxContainer"]
margin_right = 694.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
align = 1
autowrap = true

[node name="ItemList" type="ItemList" parent="Popup/VBoxContainer"]
margin_top = 44.0
margin_right = 694.0
margin_bottom = 193.0
rect_clip_content = false
size_flags_horizontal = 9
custom_fonts/font = SubResource( 2 )
auto_height = true

[node name="Wrong" type="AudioStreamPlayer" parent="Popup"]
stream = ExtResource( 4 )

[node name="Correct" type="AudioStreamPlayer" parent="Popup"]
stream = ExtResource( 5 )

[node name="CorrectTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WrongTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Player" parent="." instance=ExtResource( 6 )]

[node name="DataBase" parent="." instance=ExtResource( 7 )]

[connection signal="finished" from="." to="." method="show_question"]
[connection signal="item_selected" from="Popup/VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="request_finished" from="DataBase" to="." method="JSData"]
